--- a/.github/workflows/grid-snake.yml
+++ b/.github/workflows/grid-snake.yml
@@ -19,8 +19,8 @@ jobs:
           outputs: |
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
-      - name: Push Snake Animation to Output Branch
-        uses: actions/upload-artifact@v3
+      - name: Upload Contribution Snake Artifact
+        uses: actions/upload-artifact@v4
         with:
           name: contribution-snake
           path: dist/github-contribution-grid-snake.svg
