--- a/.github/workflows/grid-snake.yml
+++ b/.github/workflows/grid-snake.yml
@@ -24,11 +24,11 @@ jobs:
         with:
           name: contribution-snake
           path: dist/github-contribution-grid-snake.svg
-          
+
       - name: Run GitHub Metrics
         uses: lowlighter/metrics@latest
         with:
-          token: ${{ secrets.METRICS_TOKEN }}
+          token: ${{ secrets.GH_PAT }}
 
 
 # name: generate animation
