--- a/.github/workflows/grid-snake.yml
+++ b/.github/workflows/grid-snake.yml
@@ -25,10 +25,10 @@ jobs:
           name: contribution-snake
           path: dist/github-contribution-grid-snake.svg
 
-      - name: Run GitHub Metrics
-        uses: lowlighter/metrics@latest
-        with:
-          token: ${{ secrets.GH_PAT }}
+      # - name: Run GitHub Metrics
+      #   uses: lowlighter/metrics@latest
+      #   with:
+      #     token: ${{ secrets.GH_PAT }}
 
 
 # name: generate animation
