--- a/.github/workflows/grid-snake.yml
+++ b/.github/workflows/grid-snake.yml
@@ -10,6 +10,8 @@
 # jobs:
 #   generate:
 #     runs-on: ubuntu-latest
+#     permissions:
+#       contents: write
 #     steps:
 #       - name: Generate Contribution Snake
 #         uses: Platane/snk@v2
@@ -31,8 +33,6 @@
 
 
 
-# GitHub Action for generating a contribution graph with a snake eating your contributions.
-
 name: Generate Snake
 
 # Controls when the action will run. This action runs every 6 hours.
@@ -47,10 +47,11 @@ on:
 
 # The sequence of runs in this workflow:
 jobs:
-  # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
