--- a/.github/workflows/grid-snake.yml
+++ b/.github/workflows/grid-snake.yml
@@ -52,7 +52,8 @@ jobs:
         with:
           github_user_name: luoping1004
           svg_file_path: ./github-contribution-grid-snake.svg
-
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
       - name: Commit and push changes
         run: |
           git config --global user.name "github-actions[bot]"
