--- a/.github/workflows/grid-snake.yml
+++ b/.github/workflows/grid-snake.yml
@@ -48,12 +48,15 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Generate snake animation
-        uses: Platane/snk@v2
+        uses: Platane/snk/svg-only@v3
         with:
           github_user_name: luoping1004
           svg_file_path: ./github-contribution-grid-snake.svg
         env:
           GITHUB_TOKEN: ${{ secrets.GH_PAT }}
+      - name: Debug token
+        run: |
+          echo "Token: ${{ secrets.GH_PAT }}"
       - name: Commit and push changes
         run: |
           git config --global user.name "github-actions[bot]"
