--- a/.github/workflows/grid-snake.yml
+++ b/.github/workflows/grid-snake.yml
@@ -1,66 +1,75 @@
 ## GitHub Action for generating a contribution graph with a snake eating your contributions.
 
-# name: Generate Contribution Snake
+name: generate animation
+
+on:
+  # run automatically every 12 hours
+  schedule:
+    - cron: "0 */12 * * *"
+
+  # allows to manually run the job at any time
+  workflow_dispatch:
+
+  # run on every push on the master branch
+  push:
+    branches:
+    - main
+
+
+jobs:
+  generate:
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+
+    steps:
+      # generates a snake game from a github user (<github_user_name>) contributions graph, output a svg animation at <svg_out_path>
+      - name: Generate github-contribution-grid-snake.svg
+        uses: Platane/snk/svg-only@v2
+        with:
+          github_user_name: ${{ github.repository_owner }}
+          outputs: |
+            dist/github-contribution-grid-snake.svg
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
+      # push the content of <build_dir> to a branch
+      # the content will be available at https://raw.githubusercontent.com/<github_user>/<repository>/<target_branch>/<file> , or as github page
+      - name: Push github-contribution-grid-snake.svg to the output branch
+        uses: crazy-max/ghaction-github-pages@v2.6.0
+        with:
+          target_branch: output
+          build_dir: dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
+
+
+
+# name: Update Snake Animation
 
 # on:
 #   schedule:
-#     - cron: "0 0 * * *"  # Runs daily at midnight (UTC)
+#     - cron: "0 0 * * *"  # Runs daily at midnight UTC
 #   workflow_dispatch:  # Allows manual triggering
 
 # jobs:
-#   generate:
+#   update-snake:
 #     runs-on: ubuntu-latest
-#     permissions:
-#       contents: write
 #     steps:
-#       - name: Generate Contribution Snake
-#         uses: Platane/snk@v2
+#       - name: Checkout repository
+#         uses: actions/checkout@v3
+
+#       - name: Generate snake animation
+#         uses: Platane/snk/svg-only@v3
 #         with:
 #           github_user_name: luoping1004
-#           outputs: |
-#             dist/github-contribution-grid-snake.svg
-#             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
-#       - name: Upload Contribution Snake Artifact
-#         uses: actions/upload-artifact@v4
-#         with:
-#           name: contribution-snake
-#           path: dist/github-contribution-grid-snake.svg
-
-#       - name: Run GitHub Metrics
-#         uses: lowlighter/metrics@latest
-#         with:
-#           token: ${{ secrets.GH_PAT }}
-
-
-
-name: Update Snake Animation
-
-on:
-  schedule:
-    - cron: "0 0 * * *"  # Runs daily at midnight UTC
-  workflow_dispatch:  # Allows manual triggering
-
-jobs:
-  update-snake:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Generate snake animation
-        uses: Platane/snk/svg-only@v3
-        with:
-          github_user_name: luoping1004
-          svg_file_path: ./github-contribution-grid-snake.svg
-        env:
-          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
-      - name: Debug token
-        run: |
-          echo "Token: ${{ secrets.GH_PAT }}"
-      - name: Commit and push changes
-        run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add .
-          git commit -m "Update snake animation"
-          git push
+#           svg_file_path: ./github-contribution-grid-snake.svg
+#         env:
+#           GITHUB_TOKEN: ${{ secrets.GH_PAT }}
+#       - name: Debug token
+#         run: |
+#           echo "Token: ${{ secrets.GH_PAT }}"
+#       - name: Commit and push changes
+#         run: |
+#           git config --global user.name "github-actions[bot]"
+#           git config --global user.email "github-actions[bot]@users.noreply.github.com"
+#           git add .
+#           git commit -m "Update snake animation"
+#           git push
