--- a/.github/workflows/grid-snake.yml
+++ b/.github/workflows/grid-snake.yml
@@ -30,6 +30,10 @@ jobs:
           outputs: |
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
+
+      - name: Debug token
+        run: |
+          echo "Token: ${{ secrets.GH_PAT }}"
       # push the content of <build_dir> to a branch
       # the content will be available at https://raw.githubusercontent.com/<github_user>/<repository>/<target_branch>/<file> , or as github page
       - name: Push github-contribution-grid-snake.svg to the output branch
