--- a/.github/workflows/grid-snake.yml
+++ b/.github/workflows/grid-snake.yml
@@ -1,4 +1,5 @@
 ## GitHub Action for generating a contribution graph with a snake eating your contributions.
+## GitHub Action для создания графика вкладов со змеей, пожирающей ваши взносы.
 
 name: generate animation
 
@@ -16,6 +17,7 @@ on:
     - main
 
 
+
 jobs:
   generate:
     runs-on: ubuntu-latest
@@ -26,14 +28,10 @@ jobs:
       - name: Generate github-contribution-grid-snake.svg
         uses: Platane/snk/svg-only@v2
         with:
-          github_user_name: luoping1004
+          github_user_name: ${{ github.repository_owner }}
           outputs: |
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
-
-      - name: Debug token
-        run: |
-          echo "Token: ${{ secrets.GH_PAT }}"
       # push the content of <build_dir> to a branch
       # the content will be available at https://raw.githubusercontent.com/<github_user>/<repository>/<target_branch>/<file> , or as github page
       - name: Push github-contribution-grid-snake.svg to the output branch
@@ -42,38 +40,60 @@ jobs:
           target_branch: output
           build_dir: dist
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-
-
-# name: Update Snake Animation
-
-# on:
-#   schedule:
-#     - cron: "0 0 * * *"  # Runs daily at midnight UTC
-#   workflow_dispatch:  # Allows manual triggering
-
-# jobs:
-#   update-snake:
-#     runs-on: ubuntu-latest
-#     steps:
-#       - name: Checkout repository
-#         uses: actions/checkout@v3
-
-#       - name: Generate snake animation
-#         uses: Platane/snk/svg-only@v3
-#         with:
-#           github_user_name: luoping1004
-#           svg_file_path: ./github-contribution-grid-snake.svg
-#         env:
-#           GITHUB_TOKEN: ${{ secrets.GH_PAT }}
-#       - name: Debug token
-#         run: |
-#           echo "Token: ${{ secrets.GH_PAT }}"
-#       - name: Commit and push changes
-#         run: |
-#           git config --global user.name "github-actions[bot]"
-#           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-#           git add .
-#           git commit -m "Update snake animation"
-#           git push
+#name: Generate Snake
+#
+## Controls when the action will run. This action runs every 6 hours.
+## Управляет запуском действия. Это действие выполняется каждые 6 часов.
+#on:
+#  schedule:
+#      # every 6 hours
+#    - cron: "0 */6 * * *"
+#
+## This command allows us to run the Action automatically from the Actions tab.
+## Эта команда позволяет нам автоматически запускать действие с вкладки «Действия».
+#  workflow_dispatch:
+#
+## The sequence of runs in this workflow:
+## Последовательность прогонов в этом рабочем процессе:
+#jobs:
+#  # This workflow contains a single job called "build"
+#  build:
+#    # The type of runner that the job will run on
+#    runs-on: ubuntu-latest
+#    timeout-minutes: 10
+#    # Steps represent a sequence of tasks that will be executed as part of the job
+#    steps:
+#
+#    # Checks repo under $GITHUB_WORKSHOP, so your job can access it
+##      - uses: actions/checkout@v2
+#      - uses: Platane/snk@aebc3a92857730857d5a96010a3538f16bbec662  # v3.0.0
+#
+#    # Generates the snake
+#      - uses: Platane/snk@aebc3a92857730857d5a96010a3538f16bbec662  # v3.0.0
+#        id: snake-gif
+#        with:
+#          github_user_name: BEPb
+#          # these next 2 lines generate the files on a branch called "output". This keeps the main branch from cluttering up.
+#          gif_out_path: dist/github-contribution-grid-snake.gif
+#          svg_out_path: dist/github-contribution-grid-snake.svg
+#
+#     # show the status of the build. Makes it easier for debugging (if there's any issues).
+#      - run: git status
+#
+#      # Push the changes
+#      - name: Push changes
+#        uses: crazy-max/ghaction-github-pages@db4476a01402e1a7ce05f41832040eef16d14925
+#        with:
+#          github_token: ${{ secrets.GITHUB_TOKEN }}
+#          branch: master
+#          force: true
+#
+#      - uses: crazy-max/ghaction-github-pages@db4476a01402e1a7ce05f41832040eef16d14925
+#        with:
+#          # the output branch we mentioned above
+#          target_branch: output
+#          build_dir: dist
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
