--- a/.github/workflows/grid-snake.yml
+++ b/.github/workflows/grid-snake.yml
@@ -40,7 +40,7 @@ jobs:
           target_branch: output
           build_dir: dist
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
+          GITHUB_TOKEN: ${{ secrets.METRICS_TOKEN }}
 
 #name: Generate Snake
 #
